# kalorie

./: .gitignore  README.md  pyproject.toml
src/kalorie/: constants.py  decor.py  get_page.py  make_request.py  parse_page.py
src/kalorie/get_data/: get_page.py
src/kalorie/parsers/: parse_source1.py  parse_source1_csv.py
